# org.speed_dreams.SpeedDreams

./: .gitignore  flathub.json  human.xml  org.speed_dreams.SpeedDreams.appdata.xml  org.speed_dreams.SpeedDreams.desktop  org.speed_dreams.SpeedDreams.yaml  osg-hud-fonts-2.2.2.patch  osg-sky-2.2.2.patch  raceengine.xml  speed-dreams-2.sh  speeddreams-aarch64.patch
patches/: minizip-1.3.CMakeLists.txt
patches/rhash/: CMakeLists.txt  rhash-tohex.cmake
patches/rhash/librhash/: CMakeLists.txt
